--- a/docs/_includes/head.html
+++ b/docs/_includes/head.html
@@ -1,26 +1,9 @@
-<!doctype html>
-<html lang="en-US">
-  <head>
+<head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <title>Home</title>
+  <title>{{ page.title }}</title>
   <!link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Pixelify+Sans">
   <link href="https://fonts.googleapis.com/css2?family=Pixelify+Sans" rel="stylesheet">
   <link rel="stylesheet" href="/assets/styles/styles.css">
-  <link rel="icon" type="image/x-icon" href="/assets/images/favicon.ico">
+  <link rel="icon" type="image/x-icon" href="{{ "/assets/images/favicon.ico" | relative_url }}">
 </head>
-  <body>
-    <nav>
-  
-    <a href="/" >
-      Home
-    </a>
-  
-    <a href="/about.html" >
-      About
-    </a>
-  
-</nav>
-    <h1>hello world!</h1>
-  </body>
-</html>
