--- a/docs/_sass/style-defs.scss
+++ b/docs/_sass/style-defs.scss
@@ -1,3 +1,3 @@
 $color-background: #8da;
 $color-grey: #666; 
-$font-sans-serif: "Pixelify Sans", cursive;
+$font-sans-serif: "Roboto", "sans-serif";
