Adding to nav bar

--- a/docs/_includes/head.html
+++ b/docs/_includes/head.html
@@ -2,9 +2,10 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
   <title>{{ page.title }}</title>
-  <!link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Pixelify+Sans">
+  <!--link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Pixelify+Sans"-->
   <link href="https://fonts.googleapis.com/css2?family=Roboto" rel="stylesheet">
   <link rel="stylesheet" href="/assets/styles/styles.css">
   <link rel="icon" type="image/x-icon" href="{{ "/assets/images/favicon.ico" | relative_url }}">
+  <!--favicon font: young serif, green: #8da, grey: #666-->
   {% seo %}
 </head>
