--- a/docs/_sass/navigation.scss
+++ b/docs/_sass/navigation.scss
@@ -1,4 +1,26 @@
-.current
+nav
 {
-    color: green;
+    background-color: $color-grey;
+    padding: 14px;
+    position: sticky;
+    margin: 0%;
+}
+
+a {
+    float: none;
+    color: #f2f2f2;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 17px;
+}
+
+a:hover {
+    background-color: #ddd;
+    color: black;
+}
+  
+a.current {
+    background-color: $color-background;
+    color: black;
 }
