--- a/docs/_sass/body.scss
+++ b/docs/_sass/body.scss
@@ -1,5 +1,7 @@
 body 
 {
-    background-color: $color-background;
+    background-color: white;
     font-family: $font-sans-serif;
+    margin: 0%;
+    padding: 0%
 }
