--- a/docs/_sass/style-defs.scss
+++ b/docs/_sass/style-defs.scss
@@ -1,3 +1,10 @@
-$color-background: #8da;
-$color-grey: #666; 
+$color-background: #8CA0BA;
+$color-nav: #0d1321;
+$color-hover: #8ca0ba;
+$color-current: #38e2b7;
+$color-panel: #0d1321;
+
+$color-text-light: #ffffff;
+$color-text-dark: #000000;
+
 $font-sans-serif: "Roboto", "sans-serif";
