--- a/docs/_layouts/post.html
+++ b/docs/_layouts/post.html
@@ -1,8 +1,10 @@
 ---
 layout: page
 ---
-<div class="panel">
-<h1>{{ page.title }}</h1>
+<div class="container">
+  <div class="panel content">
+    <h1>{{ page.title }}</h1>
 
-{{ content }}
+    {{ content }}
+  </div>
 </div>
