--- a/docs/_includes/head.html
+++ b/docs/_includes/head.html
@@ -1,6 +1,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
+  <meta name="robots" content="noai, noimageai">
   <title>{{ page.title }}</title>
   <!--link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Pixelify+Sans"-->
   <link href="https://fonts.googleapis.com/css2?family=Roboto" rel="stylesheet">
